Add document for aws_media_connect_flow Resource

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -2121,6 +2121,19 @@
                     </ul>
                 </li>
                 <li>
+                    <a href="#">MediaConnect</a>
+                    <ul class="nav">
+                        <li>
+                            <a href="#">Resources</a>
+                            <ul class="nav nav-auto-expand">
+                                <li>
+                                    <a href="/docs/providers/aws/r/media_connect_flow.html">aws_media_connect_flow</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li>
                     <a href="#">MediaConvert</a>
                     <ul class="nav">
                         <li>
