Add support Cloudwatch Log Groups Data Source

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -517,6 +517,9 @@
                                 <li>
                                     <a href="/docs/providers/aws/d/cloudwatch_log_group.html">aws_cloudwatch_log_group</a>
                                 </li>
+                                <li>
+                                    <a href="/docs/providers/aws/d/cloudwatch_log_groups.html">aws_cloudwatch_log_groups</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
