Add 'aws_api_gateway2_stage' resource.

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -242,6 +242,9 @@
                                 <li>
                                     <a href="/docs/providers/aws/r/apigatewayv2_route_response.html">aws_apigatewayv2_route_response</a>
                                 </li>
+                                <li>
+                                    <a href="/docs/providers/aws/r/api_gateway_v2_stage.html">aws_api_gateway_v2_stage</a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
