Add 'aws_api_gateway2_route_response' resource.

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -236,6 +236,9 @@
                                 <li>
                                     <a href="/docs/providers/aws/r/apigatewayv2_route.html">aws_apigatewayv2_route</a>
                                 </li>
+                                <li>
+                                    <a href="/docs/providers/aws/r/api_gateway_v2_route_response.html">aws_api_gateway_v2_route_response</a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
