Add 'aws_api_gateway_v2_api' documentation.

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -210,6 +210,19 @@
                     </ul>
                 </li>
                 <li>
+                    <a href="#">API Gateway v2 (WebSocket APIs)</a>
+                    <ul class="nav">
+                        <li>
+                            <a href="#">Resources</a>
+                            <ul class="nav nav-auto-expand">
+                                <li>
+                                    <a href="/docs/providers/aws/r/api_gateway_v2_api.html">aws_api_gateway_v2_api</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li>
                     <a href="#">Application Autoscaling</a>
                     <ul class="nav">
                         <li>
