Add 'aws_api_gateway_v2_integration_response' resource.

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -225,6 +225,9 @@
                                     <a href="/docs/providers/aws/r/apigatewayv2_integration.html">aws_apigatewayv2_integration</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/api_gateway_v2_integration_response.html">aws_api_gateway_v2_integration_response</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/apigatewayv2_model.html">aws_apigatewayv2_model</a>
                                 </li>
                             </ul>
