--- a/website/aws.erb
+++ b/website/aws.erb
@@ -218,6 +218,9 @@
                                 <li>
                                     <a href="/docs/providers/aws/r/apigatewayv2_api.html">aws_apigatewayv2_api</a>
                                 </li>
+                                <li>
+                                    <a href="/docs/providers/aws/r/api_gateway_v2_domain_name.html">aws_api_gateway_v2_domain_name</a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
