Add AWS Lightsail Disk resource

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -2033,6 +2033,9 @@
                             <a href="#">Resources</a>
                             <ul class="nav nav-auto-expand">
                                 <li>
+                                    <a href="/docs/providers/aws/r/lightsail_disk.html">aws_lightsail_disk</a>
+                                </li
+                                <li>
                                     <a href="/docs/providers/aws/r/lightsail_domain.html">aws_lightsail_domain</a>
                                 </li>
                                 <li>
