Support SFN activity as data source

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -2987,6 +2987,9 @@
                             <a href="#">Data Sources</a>
                             <ul class="nav nav-auto-expand">
                                 <li>
+                                    <a href="/docs/providers/aws/d/sfn_activity.html">aws_sfn_activity</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/d/sfn_state_machine.html">aws_sfn_state_machine</a>
                                 </li>
                             </ul>
