add aws_kinesis_stream_consumer documentation

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1852,6 +1852,9 @@
                                 <li>
                                     <a href="/docs/providers/aws/d/kinesis_stream.html">aws_kinesis_stream</a>
                                 </li>
+                                <li>
+                                    <a href="/docs/providers/aws/d/kinesis_stream_consumer.html">aws_kinesis_stream_consumer</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
@@ -1862,6 +1865,9 @@
                                 </li>
                                 <li>
                                     <a href="/docs/providers/aws/r/kinesis_stream.html">aws_kinesis_stream</a>
+                                </li>
+                                <li>
+                                     <a href="/docs/providers/aws/r/aws_kinesis_stream_consumer.html">aws_kinesis_stream_consumer</a>
                                 </li>
                             </ul>
                         </li>
