Add documentation for aws_ec2_client_vpn resource

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1143,6 +1143,9 @@
                                     <a href="/docs/providers/aws/r/ec2_client_vpn_network_association.html">aws_ec2_client_vpn_network_association</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/ec2_client_vpn_route.html">aws_ec2_client_vpn_route</a>
+                                 </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/ec2_fleet.html">aws_ec2_fleet</a>
                                 </li>
                                 <li>
