Implement aws_codestarnotification_rule resource

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -640,6 +640,21 @@
                         </li>
                     </ul>
                 </li>
+
+                <li>
+                    <a href="#">CodeStar Notifications</a>
+                    <ul class="nav">
+                        <li>
+                            <a href="#">Resources</a>
+                            <ul class="nav nav-auto-expand">
+                                <li>
+                                    <a href="/docs/providers/aws/r/codestarnotifications_notification_rule.html">aws_codestarnotifications_notification_rule</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+
                 <li>
                     <a href="#">Cognito</a>
                     <ul class="nav">
