Added Lightsail load balancer resource, fixed 'disapear' typo in lightsail resources.

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1991,6 +1991,9 @@
                                     <a href="/docs/providers/aws/r/lightsail_key_pair.html">aws_lightsail_key_pair</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/lightsail_load_balancer.html">aws_lightsail_load_balancer</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/lightsail_static_ip.html">aws_lightsail_static_ip</a>
                                 </li>
                                 <li>
