@review Add reference to docs sidebar

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -3346,6 +3346,14 @@
                                 </li>
                             </ul>
                         </li>
+                        <li>
+                            <a href="#">Resources</a>
+                            <ul class="nav nav-auto-expand">
+                                <li>
+                                    <a href="/docs/providers/aws/r/workspaces_directory.html">aws_workspaces_directory</a>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <li>
