Add aws_s3_access_point resource.
Test 'aws_s3_bucket_object' with bucket set to access point ARN.

Add access point domain name.

Delete all access points associated with a bucket in test sweeper.

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -2561,6 +2561,9 @@
                             <a href="#">Resources</a>
                             <ul class="nav nav-auto-expand">
                                 <li>
+                                    <a href="/docs/providers/aws/r/s3_access_point.html">aws_s3_access_point</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/s3_account_public_access_block.html">aws_s3_account_public_access_block</a>
                                 </li>
                                 <li>
