Fix docs after rebase

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -3387,6 +3387,9 @@
                             <a href="#">Resources</a>
                             <ul class="nav nav-auto-expand">
                                 <li>
+                                    <a href="/docs/providers/aws/r/workspaces_directory.html">aws_workspaces_directory</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/workspaces_ip_group.html">aws_workspaces_ip_group</a>
                                 </li>
                             </ul>
