New Resource: aws_accessanalyzer_analyzer
Reference: https://github.com/terraform-providers/terraform-provider-aws/issues/11102

Output from acceptance testing:

```
--- PASS: TestAccAWSAccessAnalyzer (62.76s)
    --- PASS: TestAccAWSAccessAnalyzer/Analyzer (62.76s)
        --- PASS: TestAccAWSAccessAnalyzer/Analyzer/disappears (12.93s)
        --- PASS: TestAccAWSAccessAnalyzer/Analyzer/Tags (34.06s)
        --- PASS: TestAccAWSAccessAnalyzer/Analyzer/basic (15.77s)
```

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -56,6 +56,19 @@
                     </ul>
                 </li>
                 <li>
+                    <a href="#">Access Analyzer</a>
+                    <ul class="nav">
+                        <li>
+                            <a href="#">Resources</a>
+                            <ul class="nav nav-auto-expand">
+                                <li>
+                                    <a href="/docs/providers/aws/r/accessanalyzer_analyzer.html">aws_accessanalyzer_analyzer</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li>
                     <a href="#">ACM</a>
                     <ul class="nav">
                         <li>
