Add aws_directory_service_directory data source

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -830,6 +830,14 @@
                     <a href="#">Directory Service</a>
                     <ul class="nav">
                         <li>
+                            <a href="#">Data Sources</a>
+                            <ul class="nav nav-auto-expand">
+                                <li>
+                                    <a href="/docs/providers/aws/r/directory_service_directory.html">aws_directory_service_directory</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
                             <a href="#">Resources</a>
                             <ul class="nav nav-auto-expand">
                                 <li>
