add iot thing group resources
these changes are from https://github.com/terraform-providers/terraform-provider-aws/pull/10631 and test fix on aws.erb provided by myself.

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -877,13 +877,13 @@
                                     <a href="/docs/providers/aws/r/dx_hosted_public_virtual_interface_accepter.html">aws_dx_hosted_public_virtual_interface_accepter</a>
                                 </li>
                                 <li>
-                                    <a href="/docs/providers/aws/r/dx_hosted_transit_virtual_interface.html">aws_dx_hosted_transit_virtual_interface</a>
-                                </li>
-                                <li>
-                                    <a href="/docs/providers/aws/r/dx_hosted_transit_virtual_interface_accepter.html">aws_dx_hosted_transit_virtual_interface_accepter</a>
-                                </li>
-                                <li>
                                     <a href="/docs/providers/aws/r/dx_lag.html">aws_dx_lag</a>
+                                </li>
+                                <li>
+                                    <a href="/docs/providers/aws/r/dx_private_virtual_interface.html">aws_dx_private_virtual_interface</a>
+                                </li>
+                                <li>
+                                    <a href="/docs/providers/aws/r/dx_public_virtual_interface.html">aws_dx_public_virtual_interface</a>
                                 </li>
                                 <li>
                                     <a href="/docs/providers/aws/r/dx_transit_virtual_interface.html">aws_dx_transit_virtual_interface</a>
@@ -1176,9 +1176,6 @@
                             <a href="#">Resources</a>
                             <ul class="nav nav-auto-expand">
                                 <li>
-                                    <a href="/docs/providers/aws/r/ecs_capacity_provider.html">aws_ecs_capacity_provider</a>
-                                </li>
-                                <li>
                                     <a href="/docs/providers/aws/r/ecs_cluster.html">aws_ecs_cluster</a>
                                 </li>
                                 <li>
@@ -1237,12 +1234,6 @@
                             <ul class="nav nav-auto-expand">
                                 <li>
                                     <a href="/docs/providers/aws/r/eks_cluster.html">aws_eks_cluster</a>
-                                </li>
-                                <li>
-                                    <a href="/docs/providers/aws/r/eks_fargate_profile.html">aws_eks_fargate_profile</a>
-                                </li>
-                                <li>
-                                    <a href="/docs/providers/aws/r/eks_node_group.html">aws_eks_node_group</a>
                                 </li>
                             </ul>
                         </li>
@@ -1605,9 +1596,6 @@
                                 <li>
                                     <a href="/docs/providers/aws/r/glue_trigger.html">aws_glue_trigger</a>
                                 </li>
-                                <li>
-                                    <a href="/docs/providers/aws/r/glue_workflow.html">aws_glue_workflow</a>
-                                </li>
                             </ul>
                         </li>
                     </ul>
@@ -1615,14 +1603,6 @@
                 <li>
                     <a href="#">GuardDuty</a>
                     <ul class="nav">
-                        <li>
-                            <a href="#">Data Sources</a>
-                            <ul class="nav nav-auto-expand">
-                                <li>
-                                    <a href="/docs/providers/aws/d/guardduty_detector.html">aws_guardduty_detector</a>
-                                </li>
-                            </ul>
-                        </li>
                         <li>
                             <a href="#">Resources</a>
                             <ul class="nav nav-auto-expand">
@@ -1783,6 +1763,9 @@
                                     <a href="/docs/providers/aws/r/iot_thing.html">aws_iot_thing</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/iot_thing.html">aws_iot_thing_group</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/iot_thing_principal_attachment.html">aws_iot_thing_principal_attachment</a>
                                 </li>
                                 <li>
@@ -1936,9 +1919,6 @@
                                 <li>
                                     <a href="/docs/providers/aws/r/lambda_permission.html">aws_lambda_permission</a>
                                 </li>
-                                <li>
-                                    <a href="/docs/providers/aws/r/lambda_provisioned_concurrency_config.html">aws_lambda_provisioned_concurrency_config</a>
-                                </li>
                             </ul>
                         </li>
                     </ul>
@@ -2019,19 +1999,6 @@
                                 </li>
                                 <li>
                                     <a href="/docs/providers/aws/r/mq_configuration.html">aws_mq_configuration</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">MediaConvert</a>
-                    <ul class="nav">
-                        <li>
-                            <a href="#">Resources</a>
-                            <ul class="nav nav-auto-expand">
-                                <li>
-                                    <a href="/docs/providers/aws/r/media_convert_queue.html">aws_media_convert_queue</a>
                                 </li>
                             </ul>
                         </li>
@@ -2266,27 +2233,6 @@
                             <ul class="nav nav-auto-expand">
                                 <li>
                                     <a href="/docs/providers/aws/d/pricing_product.html">aws_pricing_product</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">Quantum Ledger Database (QLDB)</a>
-                    <ul class="nav">
-                        <li>
-                            <a href="#">Data Sources</a>
-                            <ul class="nav nav-auto-expand">
-                                <li>
-                                    <a href="/docs/providers/aws/d/qldb_ledger.html">aws_qldb_ledger</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">Resources</a>
-                            <ul class="nav nav-auto-expand">
-                                <li>
-                                    <a href="/docs/providers/aws/r/qldb_ledger.html">aws_qldb_ledger</a>
                                 </li>
                             </ul>
                         </li>
@@ -3353,14 +3299,6 @@
                             <ul class="nav nav-auto-expand">
                                 <li>
                                     <a href="/docs/providers/aws/d/workspaces_bundle.html">aws_workspaces_bundle</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">Resources</a>
-                            <ul class="nav nav-auto-expand">
-                                <li>
-                                    <a href="/docs/providers/aws/r/workspaces_ip_group.html">aws_workspaces_ip_group</a>
                                 </li>
                             </ul>
                         </li>
