--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1944,6 +1944,9 @@
                                     <a href="/docs/providers/aws/r/lambda_function.html">aws_lambda_function</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/lambda_function_event_invoke_config.html">aws_lambda_function_event_invoke_config</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/lambda_layer_version.html">aws_lambda_layer_version</a>
                                 </li>
                                 <li>
