--- a/website/aws.erb
+++ b/website/aws.erb
@@ -2747,6 +2747,14 @@
                     <a href="#">Service Discovery</a>
                     <ul class="nav">
                         <li>
+                            <a href="#">Data Sources</a>
+                            <ul class="nav nav-auto-expand">
+                                <li>
+                                    <a href="/docs/providers/aws/d/service_discovery_dns_namespace.html">aws_service_discovery_dns_namespace</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
                             <a href="#">Resources</a>
                             <ul class="nav nav-auto-expand">
                                 <li>
