New Data Source: aws_ssm_patch_baseline (#9486)
Output from acceptance testing:

```
--- PASS: TestAccAWSSsmPatchBaselineDataSource_existingBaseline (8.36s)
--- PASS: TestAccAWSSsmPatchBaselineDataSource_newBaseline (8.76s)
```

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -2892,6 +2892,9 @@
                                 <li>
                                     <a href="/docs/providers/aws/d/ssm_parameter.html">aws_ssm_parameter</a>
                                 </li>
+                                <li>
+                                    <a href="/docs/providers/aws/d/ssm_patch_baseline.html">aws_ssm_patch_baseline</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
