Add resource documentation links which is omitted

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -907,6 +907,12 @@
                                     <a href="/docs/providers/aws/r/dx_lag.html">aws_dx_lag</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/dx_private_virtual_interface.html">aws_dx_private_virtual_interface</a>
+                                </li>
+                                <li>
+                                    <a href="/docs/providers/aws/r/dx_public_virtual_interface.html">aws_dx_public_virtual_interface</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/dx_transit_virtual_interface.html">aws_dx_transit_virtual_interface</a>
                                 </li>
                             </ul>
