Adds documentation navigation link

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -2594,6 +2594,9 @@
                                     <a href="/docs/providers/aws/r/s3_bucket.html">aws_s3_bucket</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/s3_bucket_analysis_configuration.html">aws_s3_bucket_inventory</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/s3_bucket_inventory.html">aws_s3_bucket_inventory</a>
                                 </li>
                                 <li>
