Add docs link to aws_amplify_app

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -114,6 +114,19 @@
                     </ul>
                 </li>
                 <li>
+                    <a href="#">Amplify</a>
+                    <ul class="nav">
+                        <li>
+                            <a href="#">Resources</a>
+                            <ul class="nav nav-auto-expand">
+                                <li>
+                                    <a href="/docs/providers/aws/r/aws_amplify_app.html">aws_amplify_app</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li>
                     <a href="#">API Gateway</a>
                     <ul class="nav">
                         <li>
