service/ec2: New Resources for EC2 Traffic Mirroring (#9372)
Output from acceptance testing:

```
--- PASS: TestAccAWSEc2TrafficMirrorFilter_basic (19.81s)
--- PASS: TestAccAWSEc2TrafficMirrorFilterRule_basic (20.82s)
--- PASS: TestAccAWSEc2TrafficMirrorTarget_eni (63.62s)
--- PASS: TestAccAWSEc2TrafficMirrorTarget_nlb (240.87s)
--- PASS: TestAccAWSEc2TrafficMirrorSession_basic (282.32s)
```

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1036,6 +1036,21 @@
                                     <a href="/docs/providers/aws/d/ebs_volume.html">aws_ebs_volume</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/ec2_traffic_mirror_filter.html">aws_ec2_traffic_mirror_filter</a>
+                                </li>
+
+                                <li>
+                                    <a href="/docs/providers/aws/r/ec2_traffic_mirror_filter_rule.html">aws_ec2_traffic_mirror_filter_rule</a>
+                                </li>
+
+                                <li>
+                                    <a href="/docs/providers/aws/r/ec2_traffic_mirror_target.html">aws_ec2_traffic_mirror_target</a>
+                                </li>
+
+                                <li>
+                                    <a href="/docs/providers/aws/r/ec2_traffic_mirror_session.html">aws_ec2_traffic_mirror_session</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/d/ec2_transit_gateway.html">aws_ec2_transit_gateway</a>
                                 </li>
                                 <li>
