New Data Source: aws_sfn_state_machine (#10932)
Output from acceptance testing:

```
--- PASS: TestAccDataSourceAwsSfnStateMachine (10.91s)
```

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -2984,6 +2984,14 @@
                     <a href="#">Step Function (SFN)</a>
                     <ul class="nav">
                         <li>
+                            <a href="#">Data Sources</a>
+                            <ul class="nav nav-auto-expand">
+                                <li>
+                                    <a href="/docs/providers/aws/d/sfn_state_machine.html">aws_sfn_state_machine</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
                             <a href="#">Resources</a>
                             <ul class="nav nav-auto-expand">
                                 <li>
