New Data Source: aws_ec2_instance_type_offerings
Reference: https://github.com/terraform-providers/terraform-provider-aws/issues/10989

Output from acceptance testing in AWS Commercial:

```
--- PASS: TestAccAWSEc2InstanceTypeOfferingsDataSource_Filter (15.95s)
--- PASS: TestAccAWSEc2InstanceTypeOfferingsDataSource_LocationType (17.38s)
```

Output from acceptance testing in AWS GovCloud (US):

```
--- PASS: TestAccAWSEc2InstanceTypeOfferingsDataSource_Filter (21.98s)
--- PASS: TestAccAWSEc2InstanceTypeOfferingsDataSource_LocationType (23.84s)
```

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1036,6 +1036,9 @@
                                     <a href="/docs/providers/aws/d/ebs_volume.html">aws_ebs_volume</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/d/ec2_instance_type_offerings.html">aws_ec2_instance_type_offerings</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/d/ec2_transit_gateway.html">aws_ec2_transit_gateway</a>
                                 </li>
                                 <li>
