add iot_thing_group to aws.erb

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1840,6 +1840,9 @@
                                     <a href="/docs/providers/aws/r/iot_thing.html">aws_iot_thing</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/iot_thing_group.html">aws_iot_thing_group</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/iot_thing_principal_attachment.html">aws_iot_thing_principal_attachment</a>
                                 </li>
                                 <li>
