--- a/website/aws.erb
+++ b/website/aws.erb
@@ -2698,6 +2698,9 @@
                                 <li>
                                     <a href="/docs/providers/aws/d/secretsmanager_secret_version.html">aws_secretsmanager_secret_version</a>
                                 </li>
+                                <li>
+                                    <a href="/docs/providers/aws/d/secretsmanager_secret_rotation.html">aws_secretsmanager_secret_rotation</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
@@ -2708,6 +2711,9 @@
                                 </li>
                                 <li>
                                     <a href="/docs/providers/aws/r/secretsmanager_secret_version.html">aws_secretsmanager_secret_version</a>
+                                </li>
+                                <li>
+                                    <a href="/docs/providers/aws/r/secretsmanager_secret_rotation.html">aws_secretsmanager_secret_rotation</a>
                                 </li>
                             </ul>
                         </li>
