--- a/website/aws.erb
+++ b/website/aws.erb
@@ -2377,6 +2377,9 @@
                                 <li>
                                     <a href="/docs/providers/aws/r/quicksight_user.html">aws_quicksight_user</a>
                                 </li>
+                                <li>
+                                    <a href="/docs/providers/aws/r/quicksight_iam_policy_assignment.html">aws_quicksight_iam_policy_assignment</a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
