Renames documentation subcategory for API Gateway v1 to prepare for v2

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -114,7 +114,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">API Gateway</a>
+                    <a href="#">API Gateway (REST APIs)</a>
                     <ul class="nav">
                         <li>
                             <a href="#">Data Sources</a>
