--- a/website/aws.erb
+++ b/website/aws.erb
@@ -216,7 +216,7 @@
                             <a href="#">Resources</a>
                             <ul class="nav nav-auto-expand">
                                 <li>
-                                    <a href="/docs/providers/aws/r/api_gateway_v2_api.html">aws_api_gateway_v2_api</a>
+                                    <a href="/docs/providers/aws/r/api_gatewayv2_api.html">aws_api_gatewayv2_api</a>
                                 </li>
                             </ul>
                         </li>
