Correct the dropdown section title.

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -210,7 +210,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">API Gateway v2</a>
+                    <a href="#">API Gateway (WebSocket and HTTP APIs)</a>
                     <ul class="nav">
                         <li>
                             <a href="#">Resources</a>
