--- a/website/aws.erb
+++ b/website/aws.erb
@@ -219,7 +219,7 @@
                                     <a href="/docs/providers/aws/r/apigatewayv2_api.html">aws_apigatewayv2_api</a>
                                 </li>
                                 <li>
-                                    <a href="/docs/providers/aws/r/api_gateway_v2_model.html">aws_api_gateway_v2_model</a>
+                                    <a href="/docs/providers/aws/r/apigatewayv2_model.html">aws_apigatewayv2_model</a>
                                 </li>
                             </ul>
                         </li>
