added data source side navigation link

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1197,6 +1197,9 @@
                                 <li>
                                     <a href="/docs/providers/aws/d/ecr_repository.html">aws_ecr_repository</a>
                                 </li>
+                                <li>
+                                    <a href="/docs/providers/aws/d/ecr_authorization_token.html">aws_ecr_authorization_token</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
