Fixed some namings and sidebar link

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1715,6 +1715,9 @@
                                     <a href="/docs/providers/aws/r/guardduty_member.html">aws_guardduty_member</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/guardduty_publishing_destination.html">aws_guardduty_publishing_destination</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/guardduty_threatintelset.html">aws_guardduty_threatintelset</a>
                                 </li>
                             </ul>
