service/ec2: Initial support for Local Zones
Reference: https://github.com/terraform-providers/terraform-provider-aws/issues/11136
Reference: https://github.com/terraform-providers/terraform-provider-aws/issues/11994

Changes:

* New Resource: `aws_ec2_availability_zone_group`
* data-source/aws_availability_zone: Add `all_availability_zones` and `filter` arguments
* data-source/aws_availability_zone: Add `group_name`, `network_border_group`, and `opt_in_status` attributes
* data-source/aws_availability_zones: Add `all_availability_zones` and `filter` arguments
* data-source/aws_availability_zones: Add `group_names` attribute

```
--- PASS: TestAccDataSourceAwsAvailabilityZone_Filter (17.53s)
--- PASS: TestAccDataSourceAwsAvailabilityZone_ZoneId (17.74s)
--- PASS: TestAccDataSourceAwsAvailabilityZone_AllAvailabilityZones (17.74s)
--- PASS: TestAccDataSourceAwsAvailabilityZone_Name (17.79s)

--- PASS: TestAccAWSAvailabilityZones_Filter (15.46s)
--- PASS: TestAccAWSAvailabilityZones_stateFilter (15.87s)
--- PASS: TestAccAWSAvailabilityZones_basic (16.60s)
--- PASS: TestAccAWSAvailabilityZones_AllAvailabilityZones (16.70s)
--- PASS: TestAccAWSAvailabilityZones_BlacklistedNames (17.00s)
--- PASS: TestAccAWSAvailabilityZones_BlacklistedZoneIds (17.14s)

--- PASS: TestAccAWSEc2AvailabilityZoneGroup_OptInStatus (37.67s)
```

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1114,6 +1114,9 @@
                                     <a href="/docs/providers/aws/r/ebs_volume.html">aws_ebs_volume</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/ec2_availability_zone_group.html">aws_ec2_availability_zone_group</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/ec2_capacity_reservation.html">aws_ec2_capacity_reservation</a>
                                 </li>
                                 <li>
