New Resource: aws_securityhub_member (#6975)
Output from acceptance testing:

```
--- PASS: TestAccAWSSecurityHub (89.60s)
    --- PASS: TestAccAWSSecurityHub/Account (12.62s)
        --- PASS: TestAccAWSSecurityHub/Account/basic (12.62s)
    --- PASS: TestAccAWSSecurityHub/Member (19.02s)
        --- PASS: TestAccAWSSecurityHub/Member/basic (9.65s)
        --- PASS: TestAccAWSSecurityHub/Member/invite (9.37s)
    --- PASS: TestAccAWSSecurityHub/ProductSubscription (20.25s)
        --- PASS: TestAccAWSSecurityHub/ProductSubscription/basic (20.25s)
    --- PASS: TestAccAWSSecurityHub/StandardsSubscription (37.71s)
        --- PASS: TestAccAWSSecurityHub/StandardsSubscription/basic (37.71s)
```

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -2755,6 +2755,9 @@
                                     <a href="/docs/providers/aws/r/securityhub_account.html">aws_securityhub_account</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/securityhub_member.html">aws_securityhub_member</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/securityhub_product_subscription.html">aws_securityhub_product_subscription</a>
                                 </li>
                                 <li>
