--- a/website/aws.erb
+++ b/website/aws.erb
@@ -3340,6 +3340,9 @@
                                 <li>
                                     <a href="/docs/providers/aws/d/waf_rate_based_rule.html">aws_waf_rate_based_rule</a>
                                 </li>
+                                <li>
+                                    <a href="/docs/providers/aws/d/aws_waf_subscribed_rule_group.html">aws_waf_subscribed_rule_group</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
@@ -3402,6 +3405,9 @@
                                 </li>
                                 <li>
                                     <a href="/docs/providers/aws/d/wafregional_rate_based_rule.html">aws_wafregional_rate_based_rule</a>
+                                </li>
+                                <li>
+                                    <a href="/docs/providers/aws/d/aws_wafregional_subscribed_rule_group.html">aws_wafregional_subscribed_rule_group</a>
                                 </li>
                             </ul>
                         </li>
