d/aws_api_gateway_domain_name: Add API Gateway Custom Domain lookup

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -123,6 +123,9 @@
                                     <a href="/docs/providers/aws/d/api_gateway_api_key.html">aws_api_gateway_api_key</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/d/api_gateway_domain_name.html">aws_api_gateway_domain_name</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/d/api_gateway_resource.html">aws_api_gateway_resource</a>
                                 </li>
                                 <li>
