feat(add-data-ec2-transit-gateway-vpc-attatchments): documentation add to erb

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1054,6 +1054,9 @@
                                     <a href="/docs/providers/aws/d/ec2_transit_gateway_vpc_attachment.html">aws_ec2_transit_gateway_vpc_attachment</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/d/ec2_transit_gateway_vpc_attachments.html">aws_ec2_transit_gateway_vpc_attachments</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/d/ec2_transit_gateway_vpn_attachment.html">aws_ec2_transit_gateway_vpn_attachment</a>
                                 </li>
                                 <li>
