Add aws_apigatewayv2_vpc_link resource.

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -248,6 +248,9 @@
                                 <li>
                                     <a href="/docs/providers/aws/r/apigatewayv2_stage.html">aws_apigatewayv2_stage</a>
                                 </li>
+                                <li>
+                                    <a href="/docs/providers/aws/r/apigatewayv2_vpc_link.html">aws_apigatewayv2_vpc_link</a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
