Add codestar connection resource

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -669,6 +669,20 @@
                 </li>
 
                 <li>
+                    <a href="#">CodeStar Connections</a>
+                    <ul class="nav">
+                        <li>
+                            <a href="#">Resources</a>
+                            <ul class="nav nav-auto-expand">
+                                <li>
+                                    <a href="/docs/providers/aws/r/codestarconnections_connection.html">aws_codestarconnections_connection</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+
+                <li>
                     <a href="#">Cognito</a>
                     <ul class="nav">
                         <li>
