--- a/website/aws.erb
+++ b/website/aws.erb
@@ -2755,6 +2755,9 @@
                                     <a href="/docs/providers/aws/r/securityhub_account.html">aws_securityhub_account</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/securityhub_invite_accepter.html">aws_securityhub_invite_accepter</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/securityhub_member.html">aws_securityhub_member</a>
                                 </li>
                                 <li>
