resource/aws_db_proxy: Initial resource

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -2485,6 +2485,9 @@
                                     <a href="/docs/providers/aws/r/db_parameter_group.html">aws_db_parameter_group</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/db_proxy.html">aws_db_proxy</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/db_security_group.html">aws_db_security_group</a>
                                 </li>
                                 <li>
