Add support aws_media_store_container_lifecycle_policy resource

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -2167,6 +2167,9 @@
                                     <a href="/docs/providers/aws/r/media_store_container.html">aws_media_store_container</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/media_store_container_lifecycle_policy.html">aws_media_store_container_lifecycle_policy</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/media_store_container_policy.html">aws_media_store_container_policy</a>
                                 </li>
                             </ul>
