--- a/website/aws.erb
+++ b/website/aws.erb
@@ -3579,6 +3579,19 @@
                     </ul>
                 </li>
                 <li>
+                    <a href="#">WAFv2</a>
+                    <ul class="nav">
+                        <li>
+                            <a href="#">Data Sources</a>
+                            <ul class="nav nav-auto-expand">
+                                <li>
+                                    <a href="/docs/providers/aws/d/wafv2_regex_pattern_set.html">aws_wafv2_regex_pattern_set</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li>
                     <a href="#">WorkLink</a>
                     <ul class="nav">
                         <li>
