--- a/website/aws.erb
+++ b/website/aws.erb
@@ -228,7 +228,7 @@
                                     <a href="/docs/providers/aws/r/apigatewayv2_model.html">aws_apigatewayv2_model</a>
                                 </li>
                                 <li>
-                                    <a href="/docs/providers/aws/r/api_gateway_v2_route.html">aws_api_gateway_v2_route</a>
+                                    <a href="/docs/providers/aws/r/apigatewayv2_route.html">aws_apigatewayv2_route</a>
                                 </li>
                             </ul>
                         </li>
