fixed broken link

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1876,7 +1876,7 @@
                                     <a href="/docs/providers/aws/r/iot_topic_rule.html">aws_iot_topic_rule</a>
                                 </li>
                                 <li>
-                                    <a href="/docs/providers/aws/r/iot_event_configuration">aws_iot_event_configuration</a>
+                                    <a href="/docs/providers/aws/r/iot_event_configuration.html">aws_iot_event_configuration</a>
                                 </li>
                                 <li>
                                     <a href="/docs/providers/aws/r/iot_thing.html">aws_iot_thing</a>
