data resource spot price history

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1098,6 +1098,9 @@
                                 <li>
                                     <a href="/docs/providers/aws/d/launch_template.html">aws_launch_template</a>
                                 </li>
+                                <li>
+                                    <a href="/docs/providers/aws/d/spot_price_history.html">aws_spot_price_history</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
