r/aws_route53_domain: Initial documentation

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -2638,6 +2638,9 @@
                                     <a href="/docs/providers/aws/r/route53_delegation_set.html">aws_route53_delegation_set</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/route53_domain.html">aws_route53_domain</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/route53_health_check.html">aws_route53_health_check</a>
                                 </li>
                                 <li>
