--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1365,6 +1365,9 @@
                             <a href="#">Data Sources</a>
                             <ul class="nav nav-auto-expand">
                                 <li>
+                                    <a href="/docs/providers/aws/d/efs_access_point.html">aws_efs_access_point</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/d/efs_file_system.html">aws_efs_file_system</a>
                                 </li>
                                 <li>
