resource/aws_dms_event_subscription: Finish initial implementation
Reference: https://github.com/terraform-providers/terraform-provider-aws/pull/7170#pullrequestreview-376430357

Output from acceptance testing:

```
--- PASS: TestAccAWSDmsEventSubscription_basic (481.92s)
--- PASS: TestAccAWSDmsEventSubscription_disappears (500.31s)
--- PASS: TestAccAWSDmsEventSubscription_Enabled (584.73s)
--- PASS: TestAccAWSDmsEventSubscription_EventCategories (601.53s)
--- PASS: TestAccAWSDmsEventSubscription_Tags (540.87s)
```

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -814,6 +814,9 @@
                                     <a href="/docs/providers/aws/r/dms_endpoint.html">aws_dms_endpoint</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/dms_event_subscription.html">aws_dms_event_subscription</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/dms_replication_instance.html">aws_dms_replication_instance</a>
                                 </li>
                                 <li>
