--- a/website/aws.erb
+++ b/website/aws.erb
@@ -243,7 +243,7 @@
                                     <a href="/docs/providers/aws/r/apigatewayv2_route_response.html">aws_apigatewayv2_route_response</a>
                                 </li>
                                 <li>
-                                    <a href="/docs/providers/aws/r/api_gateway_v2_stage.html">aws_api_gateway_v2_stage</a>
+                                    <a href="/docs/providers/aws/r/apigatewayv2_stage.html">aws_apigatewayv2_stage</a>
                                 </li>
                             </ul>
                         </li>
