--- a/website/aws.erb
+++ b/website/aws.erb
@@ -3154,6 +3154,12 @@
                             <a href="#">Data Sources</a>
                             <ul class="nav nav-auto-expand">
                                 <li>
+                                    <a href="/docs/providers/aws/d/coip_pool.html">aws_coip_pool</a>
+                                </li>
+                                <li>
+                                    <a href="/docs/providers/aws/d/coip_pools.html">aws_coip_pools</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/d/customer_gateway.html">aws_customer_gateway</a>
                                 </li>
                                 <li>
