r/aws_route53domains_domain: Rename from r/aws_route53_domain

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -2638,9 +2638,6 @@
                                     <a href="/docs/providers/aws/r/route53_delegation_set.html">aws_route53_delegation_set</a>
                                 </li>
                                 <li>
-                                    <a href="/docs/providers/aws/r/route53_domain.html">aws_route53_domain</a>
-                                </li>
-                                <li>
                                     <a href="/docs/providers/aws/r/route53_health_check.html">aws_route53_health_check</a>
                                 </li>
                                 <li>
@@ -2654,6 +2651,19 @@
                                 </li>
                                 <li>
                                     <a href="/docs/providers/aws/r/route53_zone_association.html">aws_route53_zone_association</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">Route53 Domains</a>
+                    <ul class="nav">
+                        <li>
+                            <a href="#">Resources</a>
+                            <ul class="nav nav-auto-expand">
+                                <li>
+                                    <a href="/docs/providers/aws/r/route53domains_domain.html">aws_route53domains_domain</a>
                                 </li>
                             </ul>
                         </li>
