--- a/website/aws.erb
+++ b/website/aws.erb
@@ -2206,6 +2206,9 @@
                                     <a href="/docs/providers/aws/r/media_store_container.html">aws_media_store_container</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/media_store_container_metric_policy.html">aws_media_store_container_metric_policy</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/media_store_container_policy.html">aws_media_store_container_policy</a>
                                 </li>
                             </ul>
