add data source links to aws provider home

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -392,6 +392,20 @@
                     <a href="#">Backup</a>
                     <ul class="nav">
                         <li>
+                            <a href="#">Data Sources</a>
+                            <ul class="nav nav-auto-expand">
+                                <li>
+                                    <a href="/docs/providers/aws/d/backup_plan.html">aws_backup_plan</a>
+                                </li>
+                                <li>
+                                    <a href="/docs/providers/aws/d/backup_selection.html">aws_backup_selection</a>
+                                </li>
+                                <li>
+                                    <a href="/docs/providers/aws/d/backup_vault.html">aws_backup_vault</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
                             <a href="#">Resources</a>
                             <ul class="nav nav-auto-expand">
                                 <li>
