Code pulled from https://github.com/terraform-providers/terraform-provider-aws/pull/1541 and updated for current terraform.
added search and document endpoints, arn and domain id
Check we have a search url before giving up waiting for completion
Flag to enable/disable waiting for endpoints, as this can make the run take 10 minutes.

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -580,6 +580,19 @@
                     </ul>
                 </li>
                 <li>
+                    <a href="#">CloudSearch</a>
+                    <ul class="nav">
+                        <li>
+                            <a href="#">Resources</a>
+                            <ul class="nav nav-auto-expand">
+                                <li>
+                                    <a href="/docs/providers/aws/r/cloudsearch_domain.html">aws_cloudsearch_domain</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                 </li>
+                 <li>
                     <a href="#">CloudWatch</a>
                     <ul class="nav">
                         <li>
