--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1122,6 +1122,9 @@
                                     <a href="/docs/providers/aws/d/ec2_transit_gateway_dx_gateway_attachment.html">aws_ec2_transit_gateway_dx_gateway_attachment</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/d/ec2_transit_gateway_peering_attachment.html">aws_ec2_transit_gateway_peering_attachment</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/d/ec2_transit_gateway_route_table.html">aws_ec2_transit_gateway_route_table</a>
                                 </li>
                                 <li>
@@ -1203,6 +1206,9 @@
                                 </li>
                                 <li>
                                     <a href="/docs/providers/aws/r/ec2_transit_gateway.html">aws_ec2_transit_gateway</a>
+                                </li>
+                                <li>
+                                    <a href="/docs/providers/aws/r/ec2_transit_gateway_peering_attachment.html">aws_ec2_transit_gateway_peering_attachment</a>
                                 </li>
                                 <li>
                                     <a href="/docs/providers/aws/r/ec2_transit_gateway_route.html">aws_ec2_transit_gateway_route</a>
